--- a/validators/index.html
+++ b/validators/index.html
@@ -30,7 +30,7 @@
 	</ol>
 	<h2>Steps</h2>
 		<ol>
-			<li>Open the file at <a href=""></a></li>
+			<li>Open the file at <a href="https://umsicomplexwebdesign.github.io/discussions/validators/validator_test.html">https://umsicomplexwebdesign.github.io/discussions/validators/validator_test.html</a></li>
 			<li>Read the instructions in the page and test each of the validators.</li>
 			<li>Take a screenshot of the page when being tested using aXe</li>
 			<li>Setup Github</li>
