added link to instructions for installing aXe and WAVE

--- a/validators/index.html
+++ b/validators/index.html
@@ -30,6 +30,7 @@
 	</ol>
 	<h2>Steps</h2>
 		<ol>
+			<li>Open <a href="https://docs.google.com/document/d/1Mj5Kyb8gPGT-_OmeLjFhRHZZHoojHVidXe84uMP9MoQ/edit?usp=sharing">the file here</a> and install aXe and WAVE (also install Chrome or Firefox if you don't have at least one).</li>
 			<li>Open the file at <a href="https://umsicomplexwebdesign.github.io/discussions/validators/validator_test.html">https://umsicomplexwebdesign.github.io/discussions/validators/validator_test.html</a></li>
 			<li>Read the instructions in the page and test each of the validators.</li>
 			<li>Take a screenshot of the page when being tested using aXe</li>
