--- a/validators/index.html
+++ b/validators/index.html
@@ -43,7 +43,7 @@
 	<ol> 
 		<li>Install Axe - <a href = "https://www.deque.com/axe/">https://www.deque.com/axe/</a></li>
 		<li>Download the tester file from Canvas and test it.  </li>
-		<li>Take a screenshot of the results. (I called mine axe-results</li>
+		<li>Take a screenshot of the results. (I called mine axe-results)</li>
 		<li>Create a folder for this course and add a subfolder called <em>discussions</em> and another subfolder called <em>validators</em>. Save the screenshot in this folder.</li>
 	</ol>
 	</section>
@@ -58,7 +58,7 @@
 	<section>
 	<h3>Github Pages</h3>
 	<ol>
-		<li>Create a repository called "username.github.io" - ake sure that it matches your username exactly.</li>
+		<li>Create a repository called "username.github.io" - make sure that it matches your username exactly.</li>
 		<li>Create another repository called “discussions” and make sure to check the box that says “Initialize this repository with a README”.  Then click on Create Repository.
 		<img src ="img/GithubPagesCreate.png" alt = "Screenshot of creating the github repository">
 		</li>
