--- a/week_4_grid/index.html
+++ b/week_4_grid/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
-    <link rel="stylesheet" type="text/css" href="css/style-answer.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>In-Class Grid Exercise</title>
   </head>
   <body>
